# FastAPI-UploadFiles

./: BackendTests.py  README.md  pyproject.toml  run.py
backend/: __init__.py
backend/routes/: __init__.py  filter.py  image.py
backend/schemas/: __init__.py  image.py
